--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <modules>
         <module>gmall-user-behavior</module>
         <module>gmall-network-flow</module>
+        <module>gmall-market-sale</module>
+        <module>gmall-login-fail</module>
+        <module>gmall-order_pay</module>
     </modules>
     <properties>
         <flink.version>1.10.1</flink.version>
@@ -105,6 +108,11 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-planner-blink_2.12</artifactId>
             <version>1.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 </project>
